// Copyright 2022 The Kubeflow Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "github.com/kubeflow/pipelines/backend/api/v2beta1/go_client";
package api;

import "google/protobuf/any.proto";

message Error {
  // Error message.
  string error_message = 1;

  // Error details.
  string error_details = 2;
}

message Status {
  // String representation of the error (error message).
  string error = 1;

  // Error code.
  int32 code = 2;

  // Any details about the error.
  repeated google.protobuf.Any details = 3;
}